# e2studio-mcp

./: .gitignore  CHANGELOG.md  PROJECT_TRACKER.md  README.md  STABILIZATION_REQUIREMENTS.md  e2studio-mcp.json  pyproject.toml  test_server_launch.py
scripts/: _test_flash_e2e.py  adm_console.py  debug_console.cmd  gdb_adm_enable.py  gdb_console.cmd  gdb_console.gdb  test_gdb.cmd
src/e2studio_mcp/: __main__.py  adm.py  bridge.py  build.py  config.py  flash.py  mapfile.py  project.py  server.py
tests/: smoke_test.py  test_adm.py  test_build.py  test_flash.py  test_mapfile.py  test_project.py
vscode-extension/: .gitignore  .vscodeignore  CHANGELOG.md  LICENSE.txt  README.md  package-lock.json  package.json  tsconfig.json
vscode-extension/scripts/: bundle.js
vscode-extension/src/: admConsole.ts  buildRunner.ts  commandBridge.ts  config.ts  debugProvider.ts  extension.ts  flashRunner.ts  launchParser.ts  projectManager.ts  statusBar.ts  webviewProvider.ts
